Fixed description alignment

--- a/products.css
+++ b/products.css
@@ -104,19 +104,22 @@
 
 .property .descprop{
     grid-area: desc;
+    display: block;
     font-weight: bold;
+    width: 100px;
 }
 
 .property .desc{    
     color: #524f4f;
+    display: block;
     grid-area: prop;
-    
-    text-align: right;
+    text-align: left;
     padding-left: 5px;
+    width: 135px;
 }
 
 .left-align{
-    text-align: right !important;
+    text-align: left !important;
 }
 
 @media screen and (min-width: 2000px){
